--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,5 @@
 #main-container {
-	padding-top: 70px;
+    padding-top: 70px;
 }
 
 #add-activity-form {
@@ -10,6 +10,14 @@
     margin-bottom: 0.5rem;
 }
 
-[contenteditable]:focus {
+[contenteditable] {
     outline: 0px solid transparent;
+    padding: 0.2rem;
+    box-shadow: 0 0 0 0.3px rgba(80, 80, 80, 0.5);
+    border-radius: 0.1rem;
+}
+
+[contenteditable=true]:empty:not(:focus):before {
+    content: attr(data-text);
+    color: rgba(80, 80, 80, 0.5);
 }
